tests/parse-fail/fn_missing_ret.fl
pub mod fn_missing_ret {
    pub struct FnMissingRet {
        pub f : fn();
    }
}
